welcome.lessons.welcome.array.search.IndexOfValue.scala.error
indexOfValue:2: error: '(' expected but identifier found.
  for k <- 0 to len(nums)-1 {
      ^